Segunda seccion de la pagina: Como ordenar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
                 <a href="https://drive.google.com/drive/folders/1TTWDn-FT4CkKvIvALvMnxnZqhijT3I1G?usp=drive_link" target="_blank">Girasoles Artificiales</a>
             </li>
         </ul>
+        <!--Cómo ordenar-->
+    <img src="./images/letrero.png" alt="" width="200">
+    <h3>¿Cómo realizar tu pedido?</h3>
+    <ol>
+        <li>Selecciona el modelo que desees de "Nuestros girasoles"</li>
+        <li>Manda inbox a nuestro número de contacto que aparece en la sección "Contacto"</li>
+        <li>Si alguno de nuestros diseños no te convence, mándanos tu idea ¡Seguro que podemos hacerla realidad!</li>
+        <li>En el inbox incluye: <br> <ul>
+            <li>Nombre a quien quedará el pedido</li>
+            <li>Fecha y hora de entrega</li>
+            <li>Domicilio de entrega (costo extra)</li>
+            <li>Menciona si le quieres agregar alguna carta y qué es lo que dirá</li>
+            <li>Forma de pago (efectivo o transferencia electrónica)</li>
+          
+        </ul>
+        <li>Confirma tu pedido una vez que nuestros servidores te atiendan</li>
+        </ol> 
+        <h4>¡LISTO! Tu pedido se habrá realizado correctamente</h3>
+        <img src="./images/orden.png" alt="" width="400"> 
+    </ol>
 
     
 </body>
