Tercera seccion de la pagina: Como contactarnos

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         <h4>¡LISTO! Tu pedido se habrá realizado correctamente</h3>
         <img src="./images/orden.png" alt="" width="400"> 
     </ol>
+<!-- Formulario de Contacto -->
+<h2>Contáctanos</h2>
+<p><span style="color: rgba(5, 129, 27, 0.919);font-weight: bold;">Whatsapp</span> : 22 85 98 78 56</p>
+<p><span style="color: black; font-weight: bold;">Correo Electrónico</span> : gacdflordora@hotmail.com</p>
+<br>
+<br>
+
 
     
 </body>
