Cuarta seccion de la pagina: Pie de la pagina

--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
 <br>
 <br>
 
+<!-- Pie de Página -->
+<footer>
+    <p>&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
+    <p>Síguenos en nuestras redes sociales:</p>
+    <ul>
+        <li><span style="color: rgba(7, 7, 158, 0.868);font-weight: bold;">Facebook</span> : Flor Dorada </li>
+        <li><span style="color: rgba(158, 7, 85, 0.971);font-weight: bold;">Instagram</span> : @FlorDorada.gacd </li>
+    </ul>
+</footer>
 
     
 </body>
