Diseño de encabezados y seccion de quienes somos

--- a/index.html
+++ b/index.html
@@ -13,9 +13,22 @@
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
     </header>
     <img src="./images/girasol.jpeg" alt="" width="700" title="Nuestros sembradios">
-
+    
+    <!--¿Quienes somos?-->
+    <section id="quienes-somos" style="padding: 2em; background-color: #f9f9f9;">
+        <div style="max-width: 800px; margin: auto; text-align: center;">
+            <h2 style="font-size: 2em; color: #FFBF00;">¿Quiénes Somos?</h2>
+            <p style="font-size: 1.2em; color: #555; line-height: 1.6;">
+                Somos una tienda Veracruzana apasionada por la belleza de los girasoles. Creemos que los girasoles no solo representan la alegría y la luz, sino que también aportan un toque especial de energía y calidez a cualquier espacio. 
+                <br>Nuestra misión es llevar esta energía a tu hogar, ofreciendo girasoles frescos y de alta calidad, cultivados con amor y dedicación.
+            </p>
+            <p style="font-size: 1.2em; color: #555; line-height: 1.6;">
+                Nos enorgullece trabajar de la mano con agricultores locales, garantizando que cada girasol que llega a ti sea el mejor. Ya sea para regalar, decorar, o simplemente para disfrutar de su belleza, estamos aquí para ayudarte a llenar de luz tus momentos especiales.
+            </p>
+        </div>
+    </section>
     <!-- Sección de Productos -->
-        <h2>Nuestros Girasoles</h2>
+        <h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Nuestros girasoles</h2>
         <p>Selecciona entre nuestros diferentes tipos de girasoles:</p>
         <ul>
             <li>
@@ -30,7 +43,7 @@
         </ul>
         <!--Cómo ordenar-->
     <img src="./images/letrero.png" alt="" width="200">
-    <h3>¿Cómo realizar tu pedido?</h3>
+    <h2 style="font-size: 2em; color: #FFBF00;">¿Cómo realizar tu pedido?</h2>
     <ol>
         <li>Selecciona el modelo que desees de "Nuestros girasoles"</li>
         <li>Manda inbox a nuestro número de contacto que aparece en la sección "Contacto"</li>
@@ -45,11 +58,11 @@
         </ul>
         <li>Confirma tu pedido una vez que nuestros servidores te atiendan</li>
         </ol> 
-        <h4>¡LISTO! Tu pedido se habrá realizado correctamente</h3>
+        <h3 style="color:rgb(15, 1, 1);">¡LISTO! Tu pedido se habrá realizado correctamente</h3>
         <img src="./images/orden.png" alt="" width="400"> 
     </ol>
 <!-- Formulario de Contacto -->
-<h2>Contáctanos</h2>
+<h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Contáctanos</h2>
 <p><span style="color: rgba(5, 129, 27, 0.919);font-weight: bold;">Whatsapp</span> : 22 85 98 78 56</p>
 <p><span style="color: black; font-weight: bold;">Correo Electrónico</span> : gacdflordora@hotmail.com</p>
 <br>
