--- a/index.html
+++ b/index.html
@@ -61,13 +61,8 @@
         <h3 style="color:rgb(15, 1, 1);">¡LISTO! Tu pedido se habrá realizado correctamente</h3>
         <img src="./images/orden.png" alt="" width="400"> 
     </ol>
-<!-- Formulario de Contacto -->
-<h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Contáctanos</h2>
-<p><span style="color: rgba(5, 129, 27, 0.919);font-weight: bold;">Whatsapp</span> : 22 85 98 78 56</p>
-<p><span style="color: black; font-weight: bold;">Correo Electrónico</span> : gacdflordora@hotmail.com</p>
-<br>
-<br>
 
+<!-- Cierre -->
 <footer id="contacto" style="padding: 2em; background-color: #ffbf004e; color: #020101;">
     <div style="max-width: 800px; margin: auto; text-align: center;">
     <h2 style="font-size: 2em; margin-bottom: 0.5em;">¡Gracias por visitar nuestra tienda de girasoles!</h2>
