Rediseño de secciones

--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 <body>
     <!-- Encabezado -->
     <header>
+        <section id="encabezado" style="padding: 2em; background-color: #f9f9f9;">
+            <div style="max-width: 800px; margin: auto; text-align: center;">
         <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"FLOR DORADA"</span></h1>
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
     </header>
     <img src="./images/girasol.jpeg" alt="" width="700" title="Nuestros sembradios">
+            </div>
+        </section>
     
     <!--¿Quienes somos?-->
     <section id="quienes-somos" style="padding: 2em; background-color: #f9f9f9;">
@@ -28,6 +32,8 @@
         </div>
     </section>
     <!-- Sección de Productos -->
+    <section id="Nuestros girasoles" style="padding: 2em; background-color: #f9f9f9;">
+        <div style="max-width: 800px; margin: auto; text-align: center;">
         <h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Nuestros girasoles</h2>
         <p>Selecciona entre nuestros diferentes tipos de girasoles:</p>
         <ul>
@@ -41,7 +47,11 @@
                 <a href="https://drive.google.com/drive/folders/1TTWDn-FT4CkKvIvALvMnxnZqhijT3I1G?usp=drive_link" target="_blank">Girasoles Artificiales</a>
             </li>
         </ul>
+        </div>
+    </section>
         <!--Cómo ordenar-->
+    <section id="Como ordenar" style="padding: 2em; background-color: #f9f9f9;">
+        <div style="max-width: 800px; margin: auto; text-align: center;">
     <img src="./images/letrero.png" alt="" width="200">
     <h2 style="font-size: 2em; color: #FFBF00;">¿Cómo realizar tu pedido?</h2>
     <ol>
@@ -61,6 +71,8 @@
         <h3 style="color:rgb(15, 1, 1);">¡LISTO! Tu pedido se habrá realizado correctamente</h3>
         <img src="./images/orden.png" alt="" width="400"> 
     </ol>
+        </div>
+    </section>
 
 <!-- Cierre -->
 <footer id="contacto" style="padding: 2em; background-color: #ffbf004e; color: #020101;">
