creacion de css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FLOR DORADA</title>
     <link rel="icon" href="./images/icon.png">
+    <link rel="stylesheet" href="./CSS/diseño.css">
 </head>
 <body>
     <!-- Encabezado -->
