--- a/estructura.html
+++ b/estructura.html
@@ -10,11 +10,21 @@
 <body>
     <!-- Encabezado -->
     <header>
-        <section id="encabezado" style="padding: 2em; background-color: #f9f9f9;">
-            <div style="max-width: 800px; margin: auto; text-align: center;">
-        <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"FLOR DORADA"</span></h1>
-        <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
+        <h1 class="title">FLOR DORADA</h1>
+        
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Nosotros</a></li>
+                <li><a href="#">Paquetes</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
     </header>
+    <section id="encabezado" style="padding: 2em">
+        <div style="max-width: 800px; margin: auto; text-align: center;">
+    <h1 class "h1">Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"FLOR DORADA"</span></h1>
+    <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
     <img src="./images/girasol.jpeg" alt="" width="700" title="Nuestros sembradios">
             </div>
         </section>
