--- a/estructura.html
+++ b/estructura.html
@@ -6,28 +6,43 @@
     <title>FLOR DORADA</title>
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./CSS/diseño.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Marvel:ital,wght@0,400;0,700;1,400;1,700&family=Mystery+Quest&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <!-- Encabezado -->
     <header>
         <h1 class="title">FLOR DORADA</h1>
-        
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="#">Paquetes</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
     </header>
-    <section id="encabezado" style="padding: 2em">
-        <div style="max-width: 800px; margin: auto; text-align: center;">
-    <h1 class "h1">Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"FLOR DORADA"</span></h1>
-    <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
-    <img src="./images/girasol.jpeg" alt="" width="700" title="Nuestros sembradios">
+
+    <!-- Seccion de Encabezado -->
+    <section>
+        <div class="encabezado">
+            <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"FLOR DORADA"</span></h1>
+            <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
+        </div>
+    </section>
+
+    <nav class="barra">
+        <ul>
+            <li><a href="./inicio.html">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Paquetes</a></li>
+            <li><a href="#">Contacto</a></li>
+        </ul>
+    </nav>
+
+    <div class="contenedor">
+        <img src="https://i.pinimg.com/736x/52/e3/d9/52e3d9bf5130caf0d0d2679c87d68590.jpg" alt="">
+        <div class="cuadro">
+            <h2 class="titulo">¡Flores 100% naturales!</h2>
+            <div class="texto">
+                <p>Con tratamiento de re-hidratación para que se mantengan intactas durante 1 año. <br> No necesitan agua ni mantenimientos extraordinarios, por ello podemos enviar a todo México por paquetería.
+                </p>
             </div>
-        </section>
+        </div>
+    </div>
     
     <!--¿Quienes somos?-->
     <section id="quienes-somos" style="padding: 2em; background-color: #f9f9f9;">
