--- a/pedidos.html
+++ b/pedidos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio</title>
+    <title>Document</title>
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./CSS/diseño.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,17 +25,29 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
+   
+    <section id="Nuestros girasoles" style="padding: 2em; background-color: #f9f9f9;">
+        <div style="max-width: 800px; margin: auto; text-align: center;">
+        <h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Nuestros girasoles</h2>
+        <p>Selecciona entre nuestros diferentes tipos de girasoles:</p>
+        <ul>
+            <li>
+                <a href="https://drive.google.com/drive/folders/1EpDnutwIavztNiMxKn6INfLQhqQ_0MmA?usp=sharing" target="_blank">Ramos de girasoles</a>
+            </li>
+            <li>
+                <a href="https://drive.google.com/drive/folders/1q1yTmnEnPQE2ObxryEIoTUGpUjB13K9z?usp=sharing" target="_blank">Girasoles en maceta</a>
+            </li>
+            <li>
+                <a href="https://drive.google.com/drive/folders/1TTWDn-FT4CkKvIvALvMnxnZqhijT3I1G?usp=drive_link" target="_blank">Girasoles Artificiales</a>
+            </li>
+        </ul>
+        </div>
+    </section>
 
-    <div class="inicio">
-        <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
-        <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
-        <img src="./images/girasol.jpeg" alt="" title="Nuestros sembradios">
-    </div>
-    
     <!-- Pie de Página -->
     <footer>
         <p>&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
     </footer>
-    
+
 </body>
 </html>
