--- a/contacto.html
+++ b/contacto.html
@@ -20,13 +20,13 @@
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a href="./diseños.html">Diseños</a></li>
             <li><a href="./pedidos.html">Pedidos</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
-    <div id="contacto" style="padding: 2em; background-color: #ffbf004e; color: #020101;">
+    <div class="cuerpo">
         <div style="max-width: 800px; margin: auto; text-align: center;">
         <h2 style="font-size: 2em; margin-bottom: 0.5em;">¡Gracias por visitar nuestra tienda de girasoles!</h2>
         <p style="font-size: 1.2em; margin-bottom: 1em;">
@@ -34,8 +34,9 @@
         <br>Si tienes alguna pregunta o deseas hacer un pedido especial, no dudes en ponerte en contacto con nosotros. 
         <br>Estamos aquí para brindarte el mejor servicio y las flores más frescas.
         </p>
-            
-        <div style="margin-top: 1.5em;">
+    </div>
+
+    <div class="media">
         <p style="font-size: 1em; font-weight: bold;">Contacto:</p>
         <p style="margin: 0.5em 0;">Teléfono: +52 2285 433722</p>
         <p style="margin: 0.5em 0;">Correo electrónico: solYvida@gmail.com</p>
