--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a href="./diseños.html">Diseños</a></li>
             <li><a href="./pedidos.html">Pedidos</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
