--- a/pedidos.html
+++ b/pedidos.html
@@ -20,30 +20,39 @@
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a href="./diseños.html">Diseños</a></li>
             <li><a href="./pedidos.html">Pedidos</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
    
-    <section id="Nuestros girasoles" style="padding: 2em; background-color: #f9f9f9;">
+
+    <!--Cómo ordenar-->
+    <section id="Como ordenar" style="padding: 2em; background-color: #f9f9f9;">
         <div style="max-width: 800px; margin: auto; text-align: center;">
-        <h2 style="font-size: 2em; color:rgba(94, 44, 8, 0.938);">Nuestros girasoles</h2>
-        <p>Selecciona entre nuestros diferentes tipos de girasoles:</p>
-        <ul>
-            <li>
-                <a href="https://drive.google.com/drive/folders/1EpDnutwIavztNiMxKn6INfLQhqQ_0MmA?usp=sharing" target="_blank">Ramos de girasoles</a>
-            </li>
-            <li>
-                <a href="https://drive.google.com/drive/folders/1q1yTmnEnPQE2ObxryEIoTUGpUjB13K9z?usp=sharing" target="_blank">Girasoles en maceta</a>
-            </li>
-            <li>
-                <a href="https://drive.google.com/drive/folders/1TTWDn-FT4CkKvIvALvMnxnZqhijT3I1G?usp=drive_link" target="_blank">Girasoles Artificiales</a>
-            </li>
+    <img src="./images/letrero.png" alt="" width="200">
+    <h2 style="font-size: 2em; color: #FFBF00;">¿Cómo realizar tu pedido?</h2>
+    <ol>
+        <li>Selecciona el modelo que desees de "Nuestros girasoles"</li>
+        <li>Manda inbox a nuestro número de contacto que aparece en la sección "Contacto"</li>
+        <li>Si alguno de nuestros diseños no te convence, mándanos tu idea ¡Seguro que podemos hacerla realidad!</li>
+        <li>En el inbox incluye: <br> <ul>
+            <li>Nombre a quien quedará el pedido</li>
+            <li>Fecha y hora de entrega</li>
+            <li>Domicilio de entrega (costo extra)</li>
+            <li>Menciona si le quieres agregar alguna carta y qué es lo que dirá</li>
+            <li>Forma de pago (efectivo o transferencia electrónica)</li>
+          
         </ul>
+        <li>Confirma tu pedido una vez que nuestros servidores te atiendan</li>
+        </ol> 
+        <h3 style="color:rgb(15, 1, 1);">¡LISTO! Tu pedido se habrá realizado correctamente</h3>
+        <img src="./images/orden.png" alt="" width="400"> 
+    </ol>
         </div>
     </section>
 
+    
     <!-- Pie de Página -->
     <footer>
         <p>&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
