--- a/estructura.html
+++ b/estructura.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a href="./diseños.html">Diseños</a></li>
             <li><a href="./pedidos.html">Pedidos</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
@@ -45,31 +45,6 @@
         </div>
     </div>
     
-    <!--Cómo ordenar-->
-    <section id="Como ordenar" style="padding: 2em; background-color: #f9f9f9;">
-        <div style="max-width: 800px; margin: auto; text-align: center;">
-    <img src="./images/letrero.png" alt="" width="200">
-    <h2 style="font-size: 2em; color: #FFBF00;">¿Cómo realizar tu pedido?</h2>
-    <ol>
-        <li>Selecciona el modelo que desees de "Nuestros girasoles"</li>
-        <li>Manda inbox a nuestro número de contacto que aparece en la sección "Contacto"</li>
-        <li>Si alguno de nuestros diseños no te convence, mándanos tu idea ¡Seguro que podemos hacerla realidad!</li>
-        <li>En el inbox incluye: <br> <ul>
-            <li>Nombre a quien quedará el pedido</li>
-            <li>Fecha y hora de entrega</li>
-            <li>Domicilio de entrega (costo extra)</li>
-            <li>Menciona si le quieres agregar alguna carta y qué es lo que dirá</li>
-            <li>Forma de pago (efectivo o transferencia electrónica)</li>
-          
-        </ul>
-        <li>Confirma tu pedido una vez que nuestros servidores te atiendan</li>
-        </ol> 
-        <h3 style="color:rgb(15, 1, 1);">¡LISTO! Tu pedido se habrá realizado correctamente</h3>
-        <img src="./images/orden.png" alt="" width="400"> 
-    </ol>
-        </div>
-    </section>
-
 <!-- Pie de Página -->
 <footer>
     <p>&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
