--- a/inicio.html
+++ b/inicio.html
@@ -20,7 +20,7 @@
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="#">Paquetes</a></li>
+            <li><a href="./diseños.html">Diseños</a></li>
             <li><a href="./pedidos.html">Pedidos</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
@@ -30,6 +30,17 @@
         <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
         <img src="./images/girasol.jpeg" alt="" title="Nuestros sembradios">
+    </div>
+
+    <div class="contenedor">
+        <img src="https://i.pinimg.com/736x/52/e3/d9/52e3d9bf5130caf0d0d2679c87d68590.jpg" alt="">
+        <div class="cuadro">
+            <h2 class="titulo">¡Flores 100% naturales!</h2>
+            <div class="texto">
+                <p>Con tratamiento de re-hidratación para que se mantengan intactas durante 1 año. <br> No necesitan agua ni mantenimientos extraordinarios, por ello podemos enviar a todo México por paquetería.
+                </p>
+            </div>
+        </div>
     </div>
     
     <!-- Pie de Página -->
