--- a/inicio.html
+++ b/inicio.html
@@ -29,11 +29,32 @@
     <div class="inicio">
         <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
-        <img src="./images/girasol.jpeg" alt="" title="Nuestros sembradios">
     </div>
 
+    <div class="slider-container">  
+        <img
+          class="slider-item"
+          src="https://i.pinimg.com/736x/d0/ab/5b/d0ab5b5aa29341fe5c7f2b609db433a7.jpg"
+        />
+        <img
+          class="slider-item"
+          src="https://i.pinimg.com/736x/52/e3/d9/52e3d9bf5130caf0d0d2679c87d68590.jpg"
+        />
+        <img
+          class="slider-item"
+          src="https://i.pinimg.com/736x/40/06/83/4006834401319233a6be42eadc00089b.jpg"
+        />
+        <img
+          class="slider-item"
+          src="https://i.pinimg.com/736x/8c/aa/c3/8caac336dd32cd04189b005eb8cab649.jpg"
+        />
+        <img
+          class="slider-item"
+          src="https://i.pinimg.com/736x/e7/a8/11/e7a811440cab7c685ad6605bd93ea3b3.jpg"
+        />
+    </div>  
+
     <div class="contenedor">
-        <img src="https://i.pinimg.com/736x/52/e3/d9/52e3d9bf5130caf0d0d2679c87d68590.jpg" alt="">
         <div class="cuadro">
             <h2 class="titulo">¡Flores 100% naturales!</h2>
             <div class="texto">
