--- a/nosotros.html
+++ b/nosotros.html
@@ -14,7 +14,7 @@
 
 <body>
     <header>
-        <h1 class="title">FLOR DORADA</h1>
+        <h1 class="title">SOL Y VIDA</h1>
     </header>
     <nav class="barra">
         <ul>
