--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/deeb7d5b52.js" crossorigin="anonymous"></script>
     <title>Contacto</title>
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./CSS/diseño.css">
@@ -28,7 +29,8 @@
 
     <div class="cuerpo">
         <div style="max-width: 800px; margin: auto; text-align: center;">
-        <h2 style="font-size: 2em; margin-bottom: 0.5em;">¡Gracias por visitar nuestra tienda de girasoles!</h2>
+        <h2 style="font-size: 2em; margin-bottom: 0.5em;">Gracias por visitar nuestra 
+        <h2 style="font-size: 2em; margin-bottom: 0em; color: #dfa60c; font-weight: bold;">Tienda de Girasoles Sol y Vida</h2>
         <p style="font-size: 1.2em; margin-bottom: 1em;">
         Nos encantaría ayudarte a llenar tus espacios de luz y alegría. 
         <br>Si tienes alguna pregunta o deseas hacer un pedido especial, no dudes en ponerte en contacto con nosotros. 
@@ -54,11 +56,19 @@
         </div>
     </form>
 
-    
+  
 
     <!-- Pie de Página -->
     <footer>
-        <p>&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
+        <div class="redes">
+            <div class="logos">
+                <a href="#"><i class="fa-solid fa-at" style="color: #b55b05;"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp" style="color: #b55b05;"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook" style="color: #b55b05;"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram" style="color: #b55b05;"></i></a>
+            </div>
+        <p style="background-color: #b55b05; padding: 10px; color: white;">&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
+        </div>
     </footer>
 
 </body>
