--- a/pedidos.html
+++ b/pedidos.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/deeb7d5b52.js" crossorigin="anonymous"></script>
     <title>Pedidos</title>
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./CSS/diseño.css">
@@ -61,12 +62,12 @@
     <footer>
         <div class="redes">
             <div class="logos">
-                <a href="#"><i class="fa-solid fa-at" style="color: #b55b05;"></i></a>
-                <a href="#"><i class="fa-brands fa-whatsapp" style="color: #b55b05;"></i></a>
-                <a href="#"><i class="fa-brands fa-facebook" style="color: #b55b05;"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram" style="color: #b55b05;"></i></a>
+                <a href="#"><i class="fa-solid fa-at" style="color: #c4742c;"></i></a>
+                <a href="#"><i class="fa-brands fa-whatsapp" style="color: #c4742c;"></i></a>
+                <a href="#"><i class="fa-brands fa-facebook" style="color: #c4742c;"></i></a>
+                <a href="#"><i class="fa-brands fa-instagram" style="color: #c4742c;"></i></a>
             </div>
-        <p style="background-color: #b55b05; padding: 10px; color: white;">&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
+        <p style="background-color: #c4742c; padding: 10px; color: white;">&copy; 2024 Tienda de Girasoles. Todos los derechos reservados.</p>
         </div>
     </footer>
 
