--- a/contacto.html
+++ b/contacto.html
@@ -22,7 +22,7 @@
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./diseños.html">Diseños</a></li>
-            <li><a href="./pedidos.html">Pedidos</a></li>
+            <li><a href="./tips.html">Tips</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
@@ -31,6 +31,7 @@
         <div style="max-width: 800px; margin: auto; text-align: center;">
         <h2 style="font-size: 2em; margin-bottom: 0.5em;">Gracias por visitar nuestra 
         <h2 style="font-size: 2em; margin-bottom: 0em; color: #dfa60c; font-weight: bold;">Tienda de Girasoles Sol y Vida</h2>
+        <img src="./images/letrero.png">
         <p style="font-size: 1.2em; margin-bottom: 1em;">
         Nos encantaría ayudarte a llenar tus espacios de luz y alegría. 
         <br>Si tienes alguna pregunta o deseas hacer un pedido especial, no dudes en ponerte en contacto con nosotros. 
