--- a/inicio.html
+++ b/inicio.html
@@ -22,13 +22,13 @@
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./diseños.html">Diseños</a></li>
-            <li><a href="./pedidos.html">Pedidos</a></li>
+            <li><a href="./tips.html">Tips</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
 
     <div class="inicio">
-        <h1>Bienvenido (a) a la Tienda de Girasoles <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
+        <h1>BIENVENIDO (A) A LA TIENDA DE GIRASOLES <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
     </div>
 
@@ -57,16 +57,16 @@
 
     <div class="contenedor">
         <div class="cuadro">
-            <h2 class="titulo">¡Flores 100% naturales!</h2>
+            <h2 class="titulo">¡Flores Naturales y Artificiales!</h2>
             <div class="texto">
-                <p>Con tratamiento de re-hidratación para que se mantengan intactas durante 1 año. <br> No necesitan agua ni mantenimientos extraordinarios, por ello podemos enviar a todo México por paquetería.
+                <p>Con tratamiento de re-hidratación para que duren mayor tiempo. <br> No necesitan mantenimientos extraordinarios, por ello podemos enviar a todo México por paquetería.
                 </p>
             </div>
         </div>
     </div>
 
     <div class="description ejemplos">
-        <h1>Inspo de Nuestras Presentaciones</h1>
+        <h1>PARA QUE TE INSPIRES</h1>
     </div>
 
     <section>
