--- a/nosotros.html
+++ b/nosotros.html
@@ -22,7 +22,7 @@
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./diseños.html">Diseños</a></li>
-            <li><a href="./pedidos.html">Pedidos</a></li>
+            <li><a href="./tips.html">Tips</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
