--- a/tips.html
+++ b/tips.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/deeb7d5b52.js" crossorigin="anonymous"></script>
-    <title>Pedidos</title>
+    <title>Tips</title>
     <link rel="icon" href="./images/icon.png">
     <link rel="stylesheet" href="./CSS/diseño.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,7 @@
             <li><a href="./inicio.html">Inicio</a></li>
             <li><a href="./nosotros.html">Nosotros</a></li>
             <li><a href="./diseños.html">Diseños</a></li>
-            <li><a href="./pedidos.html">Pedidos</a></li>
+            <li><a href="./tips.html">Tips</a></li>
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
