--- a/nosotros.html
+++ b/nosotros.html
@@ -27,21 +27,19 @@
         </ul>
     </nav>
     <!--¿Quienes somos?-->
-    <section id="quienes-somos" style="padding: 2em; background-color: #f9f9f9;">
-        <div style="max-width: 800px; margin: auto; text-align: center;">
-            <h2 style="font-size: 2em; color: #FFBF00;">¿Quiénes Somos?</h2>
-            <p style="font-size: 1.2em; color: #555; line-height: 1.6;">
+    <section id="quienes-somos" style="padding: 2em; background-color: white;">
+        <h2 style="font-size: 2em; color: #FFBF00; text-align: center;">¿Quiénes Somos?</h2>
+        <div class="historia">
+            <p style="font-size: 1.2em; color: #555; line-height: 1.6; text-align: center; padding: 0px;">
                 Somos una tienda Veracruzana apasionada por la belleza de los girasoles. Creemos que los girasoles no solo representan la alegría y la luz, sino que también aportan un toque especial de energía y calidez a cualquier espacio. 
                 <br>Nuestra misión es llevar esta energía a tu hogar, ofreciendo girasoles frescos y de alta calidad, cultivados con amor y dedicación.
-            </p>
-            <p style="font-size: 1.2em; color: #555; line-height: 1.6;">
-                Nos enorgullece trabajar de la mano con agricultores locales, garantizando que cada girasol que llega a ti sea el mejor. Ya sea para regalar, decorar, o simplemente para disfrutar de su belleza, estamos aquí para ayudarte a llenar de luz tus momentos especiales.
+                <br>Nos enorgullece trabajar de la mano con agricultores locales, garantizando que cada girasol que llega a ti sea el mejor. Ya sea para regalar, decorar, o simplemente para disfrutar de su belleza, estamos aquí para ayudarte a llenar de luz tus momentos especiales.
             </p>
         </div>
 
+        <h1 class="tithistoria">Nuestra Historia</h1>
         <div class="historia">
-            <h1>Nuestra Historia</h1>
-            <p>Estoy feliz de que nos hayas elegido para hacer especial tu momento.Soy Diana y junto con mi equipo hemos creado este emprendimiento con mucho amor. <br> Siempre he sentido una conexión especial con los girasoles. Desde que era niña, me fascinaban su color vibrante y cómo siempre parecían buscar la luz. Para mí, los girasoles representan alegría, esperanza y gratitud, valores que siempre intento compartir con las personas que amo. Por eso, cada vez que había un cumpleaños, un aniversario o cualquier momento especial, me esmeraba en buscar detalles únicos para regalar. Pero, sin importar cuánto buscara, siempre terminaba regresando a los girasoles.  
+            <p>Estoy feliz de que nos hayas elegido para hacer especial tu momento. Soy Diana y junto con mi equipo hemos creado este emprendimiento con mucho amor. <br> Siempre he sentido una conexión especial con los girasoles. Desde que era niña, me fascinaban su color vibrante y cómo siempre parecían buscar la luz. Para mí, los girasoles representan alegría, esperanza y gratitud, valores que siempre intento compartir con las personas que amo. Por eso, cada vez que había un cumpleaños, un aniversario o cualquier momento especial, me esmeraba en buscar detalles únicos para regalar. Pero, sin importar cuánto buscara, siempre terminaba regresando a los girasoles.  
 
                 <br>Un día, mientras trataba de encontrar algo especial para sorprender a mi mejor amiga, me di cuenta de que no era fácil encontrar girasoles en presentaciones originales. Fue entonces cuando se me ocurrió: ¿y si creo una tienda en línea dedicada exclusivamente a los girasoles? Me emocioné solo de pensarlo. Imaginé ramos, cajas decorativas, macetas personalizadas y pequeños girasoles en frascos, perfectos para regalar o alegrar cualquier espacio.  
                 
@@ -51,6 +49,7 @@
                 
                 Hoy, mi tienda es más que un negocio: es un reflejo de lo que amo y una forma de iluminar la vida de otros con algo tan sencillo y hermoso como un girasol.  
             </p>
+            <img src="https://i.pinimg.com/736x/e1/a4/de/e1a4de1db6e6bbf1b5c1876e0b24300d.jpg" alt="">
         </div>
     </section>
 
