curiosidades pestaña tips

--- a/contacto.html
+++ b/contacto.html
@@ -29,8 +29,8 @@
 
     <div class="cuerpo">
         <div style="max-width: 800px; margin: auto; text-align: center;">
-        <h2 style="font-size: 2em; margin-bottom: 0.5em;">Gracias por visitar nuestra 
-        <h2 style="font-size: 2em; margin-bottom: 0em; color: #dfa60c; font-weight: bold;">Tienda de Girasoles Sol y Vida</h2>
+        <h2 style="font-size: 2em; margin-bottom: 0.5em;">GARCIAS POR VISITAR NUESTRA 
+        <h2 style="font-size: 2em; margin-bottom: 0em; color: #dfa60c; font-weight: bold;">TIENDA DE GIRASOLES SOL Y VIDA</h2>
         <img src="./images/letrero.png">
         <p style="font-size: 1.2em; margin-bottom: 1em;">
         Nos encantaría ayudarte a llenar tus espacios de luz y alegría. 
