--- a/diseños.html
+++ b/diseños.html
@@ -28,7 +28,7 @@
         </ul>
     </nav>
 
-    <h2 style="font-size: 2em; text-align: center; margin-top: 10px; color:rgba(94, 44, 8, 0.938);">Nuestros Girasoles</h2>
+    <h2 style="font-size: 2em; text-align: center; margin-top: 10px; color:rgba(94, 44, 8, 0.938);">NUESTROS GIRASOLES</h2>
     <div class="fichas"> 
         <div class="ramos">
           <img src="https://i.pinimg.com/736x/2c/8f/ac/2c8fac305936247568f41ce7ec095cad.jpg" alt="Ramos">  
