--- a/tips.html
+++ b/tips.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div class="container">
-        <h1>¿QUE CUIDADOS LE DEBO DAR A MIS GIRASOLES?</h1>
+        <h1>¿QUÉ CUIDADOS LE DEBO DAR A MIS GIRASOLES?</h1>
         <div class="content">
           <div class="image-container">
             <img src="https://us.images.westend61.de/0001866214pw/mujer-sonriente-con-una-maceta-de-girasoles-en-un-vivero-JSMF02837.jpg" alt="Cuidados del arreglo">
