--- a/nosotros.html
+++ b/nosotros.html
@@ -28,7 +28,7 @@
     </nav>
     <!--¿Quienes somos?-->
     <section id="quienes-somos" style="padding: 2em; background-color: white;">
-        <h2 style="font-size: 2em; color: #FFBF00; text-align: center;">¿Quiénes Somos?</h2>
+        <h2 style="font-size: 2em; color: #FFBF00; text-align: center;">¿QUIÉNES SOMOS?</h2>
         <div class="historia">
             <p style="font-size: 1.2em; color: #555; line-height: 1.6; text-align: center; padding: 0px;">
                 Somos una tienda Veracruzana apasionada por la belleza de los girasoles. Creemos que los girasoles no solo representan la alegría y la luz, sino que también aportan un toque especial de energía y calidez a cualquier espacio. 
@@ -37,7 +37,7 @@
             </p>
         </div>
 
-        <h1 class="tithistoria">Nuestra Historia</h1>
+        <h1 class="tithistoria">NUESTRA HISTORIA</h1>
         <div class="historia">
             <p>Estoy feliz de que nos hayas elegido para hacer especial tu momento. Soy Diana y junto con mi equipo hemos creado este emprendimiento con mucho amor. <br> Siempre he sentido una conexión especial con los girasoles. Desde que era niña, me fascinaban su color vibrante y cómo siempre parecían buscar la luz. Para mí, los girasoles representan alegría, esperanza y gratitud, valores que siempre intento compartir con las personas que amo. Por eso, cada vez que había un cumpleaños, un aniversario o cualquier momento especial, me esmeraba en buscar detalles únicos para regalar. Pero, sin importar cuánto buscara, siempre terminaba regresando a los girasoles.  
 
