--- a/inicio.html
+++ b/inicio.html
@@ -32,35 +32,22 @@
         <h3>Los mejores girasoles frescos y hermosos, perfectos para esa ocasión especial.</p>
     </div>
 
-    <div class="slider-container">  
-        <img
-          class="slider-item"
-          src="https://i.pinimg.com/736x/b5/59/de/b559de486ef0625ea05c21685274ccea.jpg"
-        />
-        <img
-          class="slider-item"
-          src="https://i.pinimg.com/736x/c0/fd/f2/c0fdf2c29d8d9a274470dd43cb011d87.jpg"
-        />
-        <img
-          class="slider-item"
-          src="https://i.pinimg.com/736x/82/76/f4/8276f4d6f2d34e097fe2751d1bba54f5.jpg"
-        />
-        <img
-          class="slider-item"
-          src="https://i.pinimg.com/736x/87/12/9e/87129e605afb395cb8dcf210c7ddff2f.jpg"
-        />
-        <img
-          class="slider-item"
-          src="https://i.pinimg.com/736x/a7/52/b7/a752b7236c0d46b95f6c4653e5d0a348.jpg"
-        />
-    </div>  
+    <div class="carousel">
+      <div class="carousel-track">
+        <img src="https://i.pinimg.com/736x/b5/59/de/b559de486ef0625ea05c21685274ccea.jpg" alt="Imagen 1">
+        <img src="https://i.pinimg.com/736x/c0/fd/f2/c0fdf2c29d8d9a274470dd43cb011d87.jpg" alt="Imagen 2">
+        <img src="https://i.pinimg.com/736x/82/76/f4/8276f4d6f2d34e097fe2751d1bba54f5.jpg" alt="Imagen 3">
+        <img src="https://i.pinimg.com/736x/87/12/9e/87129e605afb395cb8dcf210c7ddff2f.jpg" alt="Imagen 4">
+        <img src="https://i.pinimg.com/736x/a7/52/b7/a752b7236c0d46b95f6c4653e5d0a348.jpg" alt="Imagen 5">
+      </div>
+    </div>
 
     <div class="contenedor">
         <div class="cuadro">
-            <h2 class="titulo">¡Flores Naturales y Artificiales!</h2>
+            <h2 class="titulo"  style="color: #ebac34;">FLORES NATURALES Y ARTIFICIALES</h2>
             <div class="texto">
-                <p>Con tratamiento de re-hidratación para que duren mayor tiempo. <br> No necesitan mantenimientos extraordinarios, por ello podemos enviar a todo México por paquetería.
-                </p>
+                <p>Con tratamiento de re-hidratación para que duren mayor tiempo. No necesitan mantenimientos extraordinarios. <br>Solo sigue nuestros consejos y tu Girasol durará más.</p>
+                <p style="font-weight: bold; font-size: 20px;color: #743419;">"Luz y vida en cada pétalo, <br>¡descubre nuestros girasoles!" </p>
             </div>
         </div>
     </div>
