rediseño barra de nv

--- a/diseños.html
+++ b/diseños.html
@@ -15,18 +15,32 @@
 <body>
 
     <header>
-        <h1 class="title">SOL Y VIDA</h1>
+        <div class="logo">
+            <img src="./images/icon.png" alt="" class="logo-img"> <!-- Imagen junto al texto -->
+            <span class="logo-text">SOL Y VIDA</span>
+        </div>
+    
+        <nav class="barra">
+            <ul>
+                <li><a href="./inicio.html">Inicio</a></li>
+                <li><a href="./nosotros.html">Nosotros</a></li>
+                <li><a href="./diseños.html">Diseños</a></li>
+                <li><a href="./tips.html">Tips</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    
+        <nav class="barra-com">
+            <button class="barra-button">MENU</button>
+            <div class="barra-content">
+                <a href="./inicio.html">Inicio</a>
+                <a href="./nosotros.html">Nosotros</a>
+                <a href="./diseños.html">Diseños</a>
+                <a href="./tips.html">Tips</a>
+                <a href="./contacto.html">Contacto</a>
+            </div>
+        </nav>
     </header>
-
-    <nav class="barra">
-        <ul>
-            <li><a href="./inicio.html">Inicio</a></li>
-            <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="./diseños.html">Diseños</a></li>
-            <li><a href="./tips.html">Tips</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
-    </nav>
 
     <h2 style="font-size: 2em; text-align: center; margin-top: 10px; color:rgba(94, 44, 8, 0.938);">NUESTROS GIRASOLES</h2>
     <div class="fichas"> 
