--- a/inicio.html
+++ b/inicio.html
@@ -14,9 +14,12 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="title">SOL Y VIDA</h1>
-    </header>
+  <header>
+    <div class="logo">
+        <img src="./images/icon.png" alt="" class="logo-img"> <!-- Imagen junto al texto -->
+        <span class="logo-text">SOL Y VIDA</span>
+    </div>
+
     <nav class="barra">
         <ul>
             <li><a href="./inicio.html">Inicio</a></li>
@@ -26,6 +29,18 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
+
+    <nav class="barra-com">
+        <button class="barra-button">MENU</button>
+        <div class="barra-content">
+            <a href="./inicio.html">Inicio</a>
+            <a href="./nosotros.html">Nosotros</a>
+            <a href="./diseños.html">Diseños</a>
+            <a href="./tips.html">Tips</a>
+            <a href="./contacto.html">Contacto</a>
+        </div>
+    </nav>
+  </header>
 
     <div class="inicio">
         <h1>BIENVENIDO (A) A LA TIENDA DE GIRASOLES <br> <span style="color: goldenrod;font-weight: bold;">"SOL Y VIDA"</span></h1>
